# inventory

./: .gitignore  README.md  docker-compose.yml
backend/: .pre-commit-config.yaml  Dockerfile  pyproject.toml
backend/src/: common.py  db.py  endpoint.py  model.py  update.sql
frontend/inventory/: package-lock.json  package.json
frontend/inventory/src/: App.vue  api.js  main.js
frontend/inventory/src/components/: AddCamera.vue  AddIssue.vue  AddMaintenanceTask.vue  AddNote.vue  AddOtherItem.vue  BaseUnit.vue  Camera.vue  ConfirmDialog.vue  Create.vue  CreateBaseUnit.vue  CreateCamera.vue  CreateOtherItem.vue  ErrorDialog.vue  HistoryReport.vue  IssueReport.vue  IssueReportInfo.vue  Issues.vue  Login.vue  MaintItemsReport.vue  MaintenanceTasks.vue  MastBearingReport.vue  NewFeetReport.vue  Notes.vue  NotesReport.vue  NotesReportInfo.vue  OtherItems.vue  Prototype.vue  SystemTestChecklist.vue  SystemTestInfo.vue  UpdateBaseUnit.vue  UpdateCamera.vue  UpdateMaintenanceTask.vue  UpdateOtherItem.vue  ViewIssues.vue  ViewMaintenanceTasks.vue  ViewNotes.vue
